# PersonalPOCs

./: README.md
GoogleCloud/Ingestion/Batch/: MERGE.sql
TOPICS/: firstELTFlow.py
TOPICS/Apache Spark/: intro.py
TOPICS/Apache Spark/MyCode/: First.py
TOPICS/Ingestion/: practise.py
TOPICS/Ingestion/Apache Kafka/: steps.txt
TOPICS/Ingestion/Apache Kafka/UsingPandas/: steps.py
TOPICS/Ingestion/Batch/: IngestBigQuery.py
TOPICS/Ingestion/CDC/: steps.txt
TOPICS/Ingestion/Orchestration/AIRFLOW/: DAG.py  custom_operator.py
TOPICS/Ingestion/Stream/: GettingDataThroughAPI.py  createDesitnationTable.py  createPubSubSchema_Topic  publishData.py
TOPICS/Modeling/: Bigquery.sql  practise.py
TOPICS/PostgreSQL/: MyQueries.sql  pgAdmin4_my.sql
TOPICS/Python/: employees.csv  example.ipynb  example.txt  pyproject.toml  recipe.json  sample.txt  setup.py  students.csv
TOPICS/Python/challenges/: NumpyAnalysis.ipynb  depthAnalysis.ipynb  practiseQuestionsPandas.py  recipe.py  screenSaver.py
TOPICS/Python/my_package.egg-info/: PKG-INFO
TOPICS/Python/src/: creatingInput.txt  input.txt
TOPICS/Python/src/example_project.egg-info/: PKG-INFO  SOURCES.txt
