[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example_project"
version = "0.1.0"
description = "A sample Python project"
authors = [
    { name = "Ranjith Shada", email = "shadaranjith000@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]